[package]
name = "selenite"
version = "0.2.0"
authors = ["0xSilene"]
edition = "2018"
description = "A Crate For Post-Quantum Cryptography Certificates Built on PQcrypto"
repository = "https://github.com/0xSilene/Selenite"
readme = "README.md"
keywords = ["cryptography","post-quantum","pqcrypto","sphincs","lacuna"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto-falcon = "0.2.0"
pqcrypto-traits = "0.3.3"
pqcrypto-sphincsplus = "0.4.3"
pqcrypto-qtesla = "0.1.0"
pqcrypto-newhope = "0.1.0"
hex = "0.4.0"
base64 = "0.11.0"
serde = {version = "1.0.102", features = ["derive"]}
serde_yaml = "0.8.11"

[dev-dependencies]
criterion = "0.3"