[package]
name = "selenite"
version = "0.5.3"
authors = ["AtropineTears"]
edition = "2018"
description = "A Crate For Post-Quantum Cryptography Certificates Built on PQcrypto"
repository = "https://github.com/AtropineTears/Selenite"
readme = "README.md"
keywords = ["cryptography","post-quantum","pqcrypto","sphincs","nightshade"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Random
getrandom = "0.2.3"

# pqcrypto Digital Signatures
pqcrypto-falcon = "0.2.4"
pqcrypto-traits = "0.3.3"
pqcrypto-sphincsplus = "0.6.0"

# other crypto
ed25519-dalek = "1.0.1"
bls-signatures = "0.11.0"

# randomness
rand = "0.7.3"

# Hashing
blake2-rfc = "0.2.18"

# Encodings
hex = "0.4.2"
base64 = "0.13.0"
base32 = "0.4.0"

# Serialization
serde = {version = "1.0.123", features = ["derive"]}
serde_yaml = "0.8.16"
bincode = "1.3.1"

# Time
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

# Logging
log = "0.4.14"


# URL Encoding
# https://url.spec.whatwg.org/
url = "2.2.2"

[dependecies.ed25519-dalek]
version = "1"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9.0"